--- a/index.html
+++ b/index.html
@@ -149,7 +149,67 @@
                 </div>
               </div>
         </div>
+
+        <div>
+            <div class="page-inner-content">
+                <div class="testimonials">
+                    <div class="testimonial">
+                        <p>"</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Ea, laborum, repudiandae officia quaerat quidem reiciendis dolorem eligendi at debitis saepe nesciunt provident 
+                            illum autem, vitae perferendis labore obcaecati? Maxime, harum.
+                        </p>
+                        <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
+                        <p>Guilherme Pin</p>
+                    </div>
+                    <div class="testimonial">
+                        <p>"</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Ea, laborum, repudiandae officia quaerat quidem reiciendis dolorem eligendi at debitis saepe nesciunt provident 
+                            illum autem, vitae perferendis labore obcaecati? Maxime, harum.
+                        </p>
+                        <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
+                        <p>Guilherme Pin</p>
+                    </div>
+                    <div class="testimonial">
+                        <p>"</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Ea, laborum, repudiandae officia quaerat quidem reiciendis dolorem eligendi at debitis saepe nesciunt provident 
+                            illum autem, vitae perferendis labore obcaecati? Maxime, harum.
+                        </p>
+                        <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
+                        <p>Guilherme Pin</p>
+                    </div>
+                </div>
+            </div>
+        </div>
      </main>
+
+     <footer class="gray-background">
+        <div class="page-inner-content footer-content" >
+            <div class="download-options">
+                <p>Baixe nosso aplicativo</p>
+                <p>Baixe nosso aplicativo para Android e iOS</p>
+            </div>
+            <img src="/images/apple.svg" alt="">
+            <img src="/images/google.png" alt="">
+        </div>
+        <div class="logo-footer">
+            <h1 class="logo">BLUE <span>STORE</span></h1>
+            <p>Nosso objetivo é ajudar pessoas comuns a se tornarem Desenvolvedores Web Pro Max
+            </p>
+        </div>
+        <div class="links-footer">
+            <h3>Links úteis</h3>
+            <ul>
+                <li>Cupons</li>
+                <li>Cupons</li>
+                <li>Cupons</li>
+                <li>Cupons</li>
+            </ul>
+        </div>
+
+     </footer>
 
     <script>
         const navBar = document.querySelector('.navbar');
